@@ -64,13 +64,13 @@ TCPClientSocket::TCPClientSocket(int platformsocket) {
 	((struct _TCPsocketX*)nativetcpstruct)->sflag=0;
 	((struct _TCPsocketX*)nativetcpstruct)->channel=(SOCKET) platformsocket;
 	sockaddr_in		sa;
-#ifdef OS2
+#if defined(WIN32) || defined(OS2)
 	int			sz;
 #else
 	socklen_t		sz;
 #endif
 	sz=sizeof(sa);
-	if(getpeername(platformsocket, (sockaddr *)(&sa), (int *)&sz)==0) {
+	if(getpeername(platformsocket, (sockaddr *)(&sa), &sz)==0) {
 		((struct _TCPsocketX*)nativetcpstruct)->
 			remoteAddress.host=/*ntohl(*/sa.sin_addr.s_addr;//);
 		((struct _TCPsocketX*)nativetcpstruct)->
@@ -81,7 +81,7 @@ TCPClientSocket::TCPClientSocket(int platformsocket) {
 		return;
 	}
 	sz=sizeof(sa);
-	if(getsockname(platformsocket, (sockaddr *)(&sa), (int *)&sz)==0) {
+	if(getsockname(platformsocket, (sockaddr *)(&sa), &sz)==0) {
 		((struct _TCPsocketX*)nativetcpstruct)->
 			localAddress.host=/*ntohl(*/sa.sin_addr.s_addr;//);
 		((struct _TCPsocketX*)nativetcpstruct)->
